--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Timur Demir</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
   <!-- Buda HTML yorum satırı )))
 -->
+<div >
+
+
 <h1 id="timurDemir" class="timur">Timur Demir</h1>
 
-<!--id elemente özeldir timurDemir başka kimsenin olamaz artık bu dosyada
-benden bu kadar şimdilik e -->
-<div class="timur"> Hello Canım bu ne lan </div>
+<p> Blog uzmanı</p>
+
+</div>
 </body>
 </html>
