--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <h1 id="timurDemir" class="timur">Timur Demir</h1>
 
-<p> Blog uzmanı</p>
+<p class="paragraf"> Blog uzmanı</p>
 
 </div>
 </body>
